TIP - 1177 - Fixed double scroll bar issue

--- a/src/app/_styles/ui.less
+++ b/src/app/_styles/ui.less
@@ -813,3 +813,9 @@ md-list-item::before, md-list-item .md-list-item-inner::before{
     margin: 10px;
   }
 }
+
+.tp-lookup-dropdown {
+  md-content {
+    overflow-y : hidden;
+  }
+}
